<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="files_label">Files</string>
    <string name="downloads_label">Downloads</string>
    <string name="app_label">@string/files_label</string>
    <string name="launcher_label">@string/files_label</string>
    <string name="title_open">Open from</string>
    <string name="title_save">Save to</string>
    <string name="menu_create_dir">New folder</string>
    <string name="menu_grid">Grid view</string>
    <string name="menu_list">List view</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Storage settings</string>
    <string name="menu_open">Open</string>
    <string name="menu_open_with">Open with</string>
    <string name="menu_open_in_new_window">Open in new window</string>
    <string name="menu_save">Save</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_copy">Copy to\u2026</string>
    <string name="menu_move">Move to\u2026</string>
    <string name="menu_compress">Compress</string>
    <string name="menu_extract">Extract to\u2026</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_inspector">Get info</string>
    <string name="menu_view_in_owner">View in <xliff:g id="source" example="Google Drive">%1$s</xliff:g></string>
    <string name="menu_new_window">New window</string>
    <string name="menu_cut_to_clipboard">Cut</string>
    <string name="menu_copy_to_clipboard">Copy</string>
    <string name="menu_paste_from_clipboard">Paste</string>
    <string name="menu_paste_into_folder">Paste into folder</string>
    <string name="menu_advanced_show">Show internal storage</string>
    <string name="menu_advanced_hide">Hide internal storage</string>
    <string name="button_select">Select</string>
    <string name="button_copy">Copy</string>
    <string name="button_compress">Compress</string>
    <string name="button_extract">Extract</string>
    <string name="button_move">Move</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_retry">Try Again</string>
    <string name="not_sorted">Not sorted</string>
    <string name="sort_dimension_name">Name</string>
    <string name="sort_dimension_summary">Summary</string>
    <string name="sort_dimension_file_type">Type</string>
    <string name="sort_dimension_size">Size</string>
    <string name="sort_dimension_date">Modified</string>
    <string name="directory_items">Number of items</string>
    <string name="handler_app_file_opens_with">This kind of file opens with</string>
    <string name="handler_app_belongs_to">This file belongs to</string>
    <string name="handler_app_button_info_1">Other apps can open this file type. Clear</string>
    <string name="handler_app_button_info_2">as the default.</string>
    <string name="handler_app_clear">Clear</string>
    <string name="handler_app_show_in">Show in provider</string>
    <string name="handler_app_not_selected">Not selected</string>
    <string name="handler_app_unknown">Unknown</string>
    <string name="sort_direction_ascending">Ascending</string>
    <string name="sort_direction_descending">Descending</string>
    <string name="drawer_open">Show roots</string>
    <string name="drawer_close">Hide roots</string>
    <string name="save_error">Failed to save document</string>
    <string name="create_error">Failed to create folder</string>
    <string name="query_error">Can\u2019t load content at the moment</string>
    <string name="root_recent">Recent</string>
    <string name="root_available_bytes"><xliff:g id="size" example="3GB">%1$s</xliff:g> free</string>
    <string name="root_type_service">Storage services</string>
    <string name="root_type_shortcut">Shortcuts</string>
    <string name="root_type_device">Devices</string>
    <string name="root_type_apps">More apps</string>
    <string name="empty">No items</string>
    <string name="no_results">No matches in %1$s</string>
    <string name="toast_no_application">Can\u2019t open file</string>
    <string name="toast_view_in_archives_unsupported">Cannot open files in archives</string>
    <string name="toast_failed_delete">Unable to delete some documents</string>
    <string name="file_inspector_load_error">Properties could not be loaded</string>
    <string name="share_via">Share via</string>
    <string name="copy_notification_title">Copying files</string>
    <string name="compress_notification_title">Compressing files</string>
    <string name="extract_notification_title">Extracting files</string>
    <string name="move_notification_title">Moving files</string>
    <string name="delete_notification_title">Deleting files</string>
    <string name="copy_remaining"><xliff:g id="duration" example="3 minutes">%s</xliff:g> left</string>
    <plurals name="copy_begin">
        <item quantity="one">Copying <xliff:g id="count" example="1">%1$d</xliff:g> item.</item>
        <item quantity="other">Copying <xliff:g id="count" example="3">%1$d</xliff:g> items.</item>
    </plurals>
    <plurals name="compress_begin">
        <item quantity="one">Compressing <xliff:g id="count" example="1">%1$d</xliff:g> file.</item>
        <item quantity="other">Compressing <xliff:g id="count" example="3">%1$d</xliff:g> files.</item>
    </plurals>
    <plurals name="extract_begin">
        <item quantity="one">Extracting <xliff:g id="count" example="1">%1$d</xliff:g> file.</item>
        <item quantity="other">Extracting <xliff:g id="count" example="3">%1$d</xliff:g> files.</item>
    </plurals>
    <plurals name="move_begin">
        <item quantity="one">Moving <xliff:g id="count" example="1">%1$d</xliff:g> item.</item>
        <item quantity="other">Moving <xliff:g id="count" example="3">%1$d</xliff:g> items.</item>
    </plurals>
    <plurals name="deleting">
        <item quantity="one">Deleting <xliff:g id="count" example="1">%1$d</xliff:g> item.</item>
        <item quantity="other">Deleting <xliff:g id="count" example="3">%1$d</xliff:g> items.</item>
    </plurals>
    <string name="undo">Undo</string>
    <string name="copy_preparing">Preparing for copy\u2026</string>
    <string name="compress_preparing">Preparing for compress\u2026</string>
    <string name="extract_preparing">Preparing for extract\u2026</string>
    <string name="move_preparing">Preparing for move\u2026</string>
    <string name="delete_preparing">Preparing for delete\u2026</string>
    <string name="delete_progress"><xliff:g id="count" example="3">%1$d</xliff:g> / <xliff:g id="totalCount" example="5">%2$d</xliff:g></string>
    <plurals name="copy_error_notification_title">
        <item quantity="one">Couldn\u2019t copy <xliff:g id="count" example="1">%1$d</xliff:g> item</item>
        <item quantity="other">Couldn\u2019t copy <xliff:g id="count" example="2">%1$d</xliff:g> items</item>
    </plurals>
    <plurals name="compress_error_notification_title">
        <item quantity="one">Couldn\u2019t compress <xliff:g id="count" example="1">%1$d</xliff:g> file</item>
        <item quantity="other">Couldn\u2019t compress <xliff:g id="count" example="2">%1$d</xliff:g> files</item>
    </plurals>
    <plurals name="move_error_notification_title">
        <item quantity="one">Couldn\u2019t move <xliff:g id="count" example="1">%1$d</xliff:g> item</item>
        <item quantity="other">Couldn\u2019t move <xliff:g id="count" example="2">%1$d</xliff:g> items</item>
    </plurals>
    <plurals name="delete_error_notification_title">
        <item quantity="one">Couldn\u2019t delete <xliff:g id="count" example="1">%1$d</xliff:g> item</item>
        <item quantity="other">Couldn\u2019t delete <xliff:g id="count" example="2">%1$d</xliff:g> items</item>
    </plurals>
    <string name="notification_touch_for_details">Tap to view details</string>
    <string name="close">Close</string>
    <plurals name="copy_failure_alert_content">
        <item quantity="one">This file wasn\u2019t copied: <xliff:g id="list" example="Document.pdf">%1$s</xliff:g></item>
        <item quantity="other">These files weren\u2019t copied: <xliff:g id="list" example="Document.pdf, Photo.jpg, Song.ogg">%1$s</xliff:g></item>
    </plurals>
    <plurals name="compress_failure_alert_content">
        <item quantity="one">This file wasn\u2019t compressed: <xliff:g id="list" example="Document.pdf">%1$s</xliff:g></item>
        <item quantity="other">These files weren\u2019t compressed: <xliff:g id="list" example="Document.pdf, Photo.jpg, Song.ogg">%1$s</xliff:g></item>
    </plurals>
    <plurals name="extract_failure_alert_content">
        <item quantity="one">This file wasn\u2019t extracted: <xliff:g id="list" example="Document.pdf">%1$s</xliff:g></item>
        <item quantity="other">These files weren\u2019t extracted: <xliff:g id="list" example="Document.pdf, Photo.jpg, Song.ogg">%1$s</xliff:g></item>
    </plurals>
    <plurals name="move_failure_alert_content">
        <item quantity="one">This file wasn\u2019t moved: <xliff:g id="list" example="Document.pdf">%1$s</xliff:g></item>
        <item quantity="other">These files weren\u2019t moved: <xliff:g id="list" example="Document.pdf, Photo.jpg, Song.ogg">%1$s</xliff:g></item>
    </plurals>
    <plurals name="delete_failure_alert_content">
        <item quantity="one">This file wasn\u2019t deleted: <xliff:g id="list" example="Document.pdf">%1$s</xliff:g></item>
        <item quantity="other">These files weren\u2019t deleted: <xliff:g id="list" example="Document.pdf, Photo.jpg, Song.ogg">%1$s</xliff:g></item>
    </plurals>
    <plurals name="copy_converted_warning_content">
        <item quantity="one">This file was converted to another format: <xliff:g id="list" example="Document.pdf">%1$s</xliff:g></item>
        <item quantity="other">These files were converted to another format: <xliff:g id="list" example="Document.pdf, Photo.jpg, Song.ogg">%1$s</xliff:g></item>
    </plurals>
    <plurals name="clipboard_files_clipped">
        <item quantity="one">Copied <xliff:g id="count" example="1">%1$d</xliff:g> item to clipboard.</item>
        <item quantity="other">Copied <xliff:g id="count" example="3">%1$d</xliff:g> items to clipboard.</item>
    </plurals>
    <string name="file_operation_rejected">File operation is not supported.</string>
    <string name="file_operation_error">File operation failed.</string>
    <string name="rename_error">Failed to rename document</string>
    <string name="menu_eject_root">Eject</string>
    <string name="notification_copy_files_converted_title">Some files were converted</string>
    <string name="open_external_dialog_request">Grant <xliff:g id="appName" example="System Settings"><b>^1</b></xliff:g>
        access to <xliff:g id="directory" example="Pictures"><i>^2</i></xliff:g> directory on
        <xliff:g id="storage" example="SD Card"><i>^3</i></xliff:g>?</string>
    <string name="open_external_dialog_request_primary_volume">Grant <xliff:g id="appName" example="System Settings"><b>^1</b></xliff:g>
        access to <xliff:g id="directory" example="Pictures"><i>^2</i></xliff:g> directory?</string>
    <string name="open_external_dialog_root_request">Grant <xliff:g id="appName" example="System Settings"><b>^1</b></xliff:g>
        access to your data, including photos and videos, on <xliff:g id="storage" example="SD Card"><i>^2</i></xliff:g>?</string>
    <string name="never_ask_again">Don\'t ask again</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <plurals name="elements_selected">
        <item quantity="one"><xliff:g id="count" example="1">%1$d</xliff:g> selected</item>
        <item quantity="other"><xliff:g id="count" example="3">%1$d</xliff:g> selected</item>
    </plurals>
</resources>