<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Context menu used when user right clicks on a file with a selection that doesn't have folders.
    The selection may be empty. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_open_group">
        <item
            android:id="@+id/dir_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/dir_menu_open"
            android:title="@string/menu_open" />
        <item
            android:id="@+id/dir_menu_open_with"
            android:title="@string/menu_open_with" />
    </group>

    <group
        android:id="@+id/menu_clipboard_group">
        <item
            android:id="@+id/dir_menu_cut_to_clipboard"
            android:title="@string/menu_cut_to_clipboard" />
        <item
            android:id="@+id/dir_menu_copy_to_clipboard"
            android:title="@string/menu_copy_to_clipboard" />
    </group>

    <group
        android:id="@+id/menu_modifier_group">
        <item
            android:id="@+id/dir_menu_rename"
            android:title="@string/menu_rename" />
        <item
            android:id="@+id/dir_menu_delete"
            android:title="@string/menu_delete" />
    </group>
    <group
        android:id="@+id/menu_settings_group">
        <item
            android:id="@+id/dir_menu_view_in_owner"
            android:title="@string/menu_view_in_owner" />
    </group>
</menu>
