<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2016 The Android Open Source Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
  -->

<!-- Context menu used when right clicks on empty area of recycler view or empty view. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_clipboard_group">
        <item
            android:id="@+id/dir_menu_paste_from_clipboard"
            android:title="@string/menu_paste_from_clipboard" />
    </group>

    <group
        android:id="@+id/menu_modifier_group">
        <item
            android:id="@+id/dir_menu_create_dir"
            android:title="@string/menu_create_dir" />

        <item
            android:id="@+id/dir_menu_select_all"
            android:title="@string/menu_select_all" />
    </group>
</menu>